# catapult-prototype

./: .gitignore  .luarc.json  BUGS.md  README.md  TODO.md  catapult-prototype-dev-1.rockspec  justfile  pyproject.toml  setup.py  tools.lua  tools.py
playdate_tools/: tools.py
source/: globals.lua  levels.lua  main.lua  pdxinfo  test.lua  world.ldtk
source/scenes/: editor.lua  game-better.lua  game.lua  menu.lua
source/sprites/: goal.lua  level.lua  slime.lua  spike.lua  wall.lua
source/ui/: level-switcher.lua
source/utils/: LDtk.lua  all.lua
support/: sheet.aseprite  slime-eye.aseprite  slime.aseprite  spike.aseprite  tiles.aseprite  world.ldtk
