[tool.poetry]
name = "playdate-tools"
version = "0.1.0"
description = ""
authors = ["Lachlan Ridley <lachie.ridley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.scripts]
pdt = "playdate_tools.tools:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
